--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "npm publish --access public",
-    "lint": "eslint -c strict.js *.js",
+    "lint": "eslint -c strict.js partials utils *.js",
     "prepublishOnly": "npm run lint"
   },
   "author": "otakustay",
@@ -13,9 +13,7 @@
   "peerDependencies": {
     "eslint": ">=4",
     "babel-eslint": ">=8",
-    "eslint-plugin-babel": ">=5",
-    "eslint-plugin-import": ">=2",
-    "eslint-plugin-react": ">=7"
+    "eslint-plugin-babel": ">=5"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
