增加eslint-plugin-react-hooks的支持

--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "main": "index.js",
   "scripts": {
     "deploy": "npm publish --access public",
-    "lint": "eslint -c strict.js partials utils *.js",
+    "lint": "eslint partials utils *.js",
     "prepublishOnly": "npm run lint"
   },
   "author": "otakustay",
   "license": "MIT",
   "peerDependencies": {
-    "eslint": ">=4",
     "babel-eslint": ">=8",
+    "eslint": ">=4",
     "eslint-plugin-babel": ">=5"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.13.0",
     "eslint-plugin-babel": "^5.0.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react-hooks": "^1.0.2"
   }
 }
