--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "3.0.0",
   "description": "eslint config for ee-fe team",
   "main": "index.js",
+  "repository": "ecomfe/eslint-config",
   "scripts": {
     "deploy": "npm publish --access public",
     "lint": "eslint import react *.js",
     "prepublishOnly": "npm run lint"
   },
-  "author": "otakustay",
+  "author": "otakustay <otakustay@gmail.com> (https://github.com/otakustay)",
+  "contributors": [
+    "GU Yiling <justice360@gmail.com> (https://github.com/Justineo)"
+  ],
   "license": "MIT",
   "dependencies": {
     "eslint-plugin-import": "^2.20.1",
@@ -28,6 +32,7 @@
   "optionalDependencies": {
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0"
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "eslint-plugin-vue": "^6.2.2"
   }
 }
