chore: update deps

--- a/package.json
+++ b/package.json
@@ -14,15 +14,10 @@
     "GU Yiling <justice360@gmail.com> (https://github.com/Justineo)"
   ],
   "license": "MIT",
-  "dependencies": {
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0"
-  },
   "peerDependencies": {
-    "babel-eslint": ">=10",
-    "eslint": ">=6",
-    "eslint-plugin-babel": "^5.0.0"
+    "babel-eslint": "10.x",
+    "eslint": "6.x",
+    "eslint-plugin-babel": "5.x"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
@@ -30,9 +25,9 @@
     "eslint-plugin-babel": "^5.3.0"
   },
   "optionalDependencies": {
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "eslint-plugin-vue": "^6.2.2"
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "2.x",
+    "eslint-plugin-vue": "6.x"
   }
 }
