--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "peerDependencies": {
     "babel-eslint": "10.x",
-    "eslint": "6.x",
+    "eslint": "6.x | 7.x",
     "eslint-plugin-babel": "5.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^7.1.0",
     "eslint-plugin-babel": "^5.3.0"
   }
 }
