--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   ],
   "license": "MIT",
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "3.x",
+    "@typescript-eslint/parser": "3.x",
     "babel-eslint": "10.x",
     "eslint": "6.x | 7.x",
     "eslint-plugin-babel": "5.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
     "eslint-plugin-react-hooks": "2.x",
-    "eslint-plugin-vue": "6.x",
-    "@typescript-eslint/parser": "3.x",
-    "@typescript-eslint/eslint-plugin": "3.x"
+    "eslint-plugin-vue": "6.x"
   },
   "peerDependenciesMeta": {
     "eslint-plugin-import": {
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.7.0",
     "eslint-plugin-babel": "^5.3.0"
   }
 }
