--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/parser": "4.x",
     "@typescript-eslint/eslint-plugin": "4.x",
     "babel-eslint": "10.x",
-    "eslint": "6.x | 7.x",
+    "eslint": "6.x || 7.x",
     "eslint-plugin-babel": "5.x",
     "eslint-plugin-import": "2.x",
     "eslint-plugin-react": "7.x",
@@ -48,6 +48,6 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.8.1",
-    "eslint-plugin-babel": "^5.3.0"
+    "eslint-plugin-babel": "^5.3.1"
   }
 }
