--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   ],
   "license": "MIT",
   "peerDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
-    "@typescript-eslint/eslint-plugin": "4.x",
-    "@typescript-eslint/parser": "4.x",
-    "eslint": "6.x || 7.x",
-    "eslint-plugin-import": "2.x",
-    "eslint-plugin-react": "7.x",
-    "eslint-plugin-react-hooks": "4.x",
-    "eslint-plugin-san": "0.x",
-    "eslint-plugin-vue": "6.x"
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^6.2.0 || 7.x",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-san": "^0.0.1",
+    "eslint-plugin-vue": "^7.3.0"
   },
   "peerDependenciesMeta": {
     "eslint-plugin-import": {
@@ -51,6 +52,7 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
     "eslint": "^7.8.1",
