feat: 兼容typescript-eslint 6.x版本

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@babel/eslint-plugin": "^7.12.1",
-    "@typescript-eslint/eslint-plugin": "^4.11.0 || 5.x",
-    "@typescript-eslint/parser": "^4.11.0 || 5.x",
+    "@typescript-eslint/eslint-plugin": "^4.11.0 || 5.x || 6.x",
+    "@typescript-eslint/parser": "^4.11.0 || 5.x || 6.x",
     "eslint": "^6.2.0 || 7.x || 8.x",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
