--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ci": "npm ci && npm run lint && npm run build",
     "deploy": "npm publish --access public",
     "prepublishOnly": "npm run lint",
-    "release": "standard-version"
+    "release": "standard-version",
+    "prepare": "husky"
   },
   "author": "otakustay <otakustay@gmail.com> (https://github.com/otakustay)",
   "contributors": [
@@ -28,6 +29,7 @@
     "@babel/core": "^7.28.0",
     "dprint": "^0.50.1",
     "eslint": "^9.32.0",
+    "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "standard-version": "^9.5.0",
     "typescript": "^5.9.2"
@@ -35,11 +37,11 @@
   "dependencies": {
     "@babel/eslint-parser": "^7.28.0",
     "@babel/eslint-plugin": "^7.27.1",
-    "globals": "^16.3.0",
-    "semver": "^7.7.2",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
+    "semver": "^7.7.2",
     "typescript-eslint": "^8.39.0"
   }
 }
