--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ecomfe/eslint-config",
-  "version": "8.0.0",
+  "version": "9.0.0-beta.0",
   "type": "module",
   "description": "ESLint config for Baidu EFE.",
   "repository": "ecomfe/eslint-config",
