--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "watch": "tsc --project tsconfig.build.json --watch",
     "build": "rm -rf dist && tsc --project tsconfig.build.json",
     "lint": "eslint src",
     "ci": "npm ci && npm run lint && npm run build",
     "deploy": "npm publish --access public",
-    "prepublishOnly": "npm run lint",
+    "prepublishOnly": "npm run ci",
     "release": "commit-and-tag-version",
     "prepare": "husky"
   },
